--- a/index.html
+++ b/index.html
@@ -382,13 +382,13 @@
             <div class="flex justify-center mb-6">
                 <img src="https://placehold.co/400x200/1e293b/a0a7ad?text=Contact+Image" alt="Image representing contact" class="rounded-lg shadow-md">
             </div>
-            <p>
+            <div class="nav-container">
                     <a href="https://www.facebook.com/jawadal.sovon"  target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.instagram.com/jawatalsovon/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/jawat-al-sovon-a42295354/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/jawatalsovon"><i class="fab fa-github" target="_blank"></i></a>
                     <a href="https://www.youtube.com/@Jawat-zz4wx"><i class="fab fa-youtube" target="_blank"></i></a>
-            </p>
+            </div>
         </div>
     </div>
     
