--- a/index.html
+++ b/index.html
@@ -338,12 +338,14 @@
                 <img src="https://placehold.co/400x200/1e293b/a0a7ad?text=Contact+Image" alt="Image representing contact" class="rounded-lg shadow-md">
             </div>
             <div class="nav-container text-center">
-                <a href="https://www.facebook.com/jawadal.sovon" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/jawatalsovon/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/jawat-al-sovon-a42295354/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/jawatalsovon" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="https://www.youtube.com/@Jawat-zz4wx" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-            </div>
+<div class="nav-container text-center">
+    <a href="mailto:jawatalsovon2981@gmail.com" aria-label="Email"><i class="fa fa-envelope"></i></a>
+    <a href="https://www.facebook.com/jawadal.sovon" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.instagram.com/jawatalsovon/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/jawat-al-sovon-a42295354/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/jawatalsovon" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+    <a href="https://www.youtube.com/@Jawat-zz4wx" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+</div>     
         </div>
     </div>
     
