--- a/index.html
+++ b/index.html
@@ -349,35 +349,24 @@
         </div>
     </div>
     
-    <div id="skills-modal" class="modal fixed inset-0 bg-black/70 hidden justify-center items-center z-50">
-        <div class="modal-content p-8 rounded-xl shadow-xl w-11/12 sm:w-3/4 lg:w-1/2 max-h-[90vh] overflow-y-auto relative">
-            <button class="modal-close-btn absolute top-4 right-4 text-gray-400 hover:text-white text-3xl font-bold">&times;</button>
-            <h2 class="text-3xl font-bold text-white mb-4">Skills</h2>
-            <div class="flex justify-center mb-6">
-                <img src="https://placehold.co/400x200/1e293b/a0a7ad?text=Skills+Image" alt="Image representing skills" class="rounded-lg shadow-md">
-            </div>
-            <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 text-gray-300">
-                <div>
-                    <h3 class="font-semibold text-xl text-white mb-2">Technical Skills</h3>
-                    <ul class="list-disc list-inside space-y-1">
-                        <li>Programming Languages: Python, Java, JavaScript, C++</li>
-                        <li>Frameworks: React, Node.js, Django</li>
-                        <li>Databases: SQL, MongoDB</li>
-                        <li>Cloud: AWS, Google Cloud</li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="font-semibold text-xl text-white mb-2">Soft Skills</h3>
-                    <ul class="list-disc list-inside space-y-1">
-                        <li>Problem-Solving</li>
-                        <li>Teamwork & Collaboration</li>
-                        <li>Communication</li>
-                        <li>Time Management</li>
-                    </ul>
-                </div>
-            </div>
+   <div id="skills-modal" class="modal fixed inset-0 bg-black/70 hidden justify-center items-center z-50">
+    <div class="modal-content p-8 rounded-xl shadow-xl w-11/12 sm:w-3/4 lg:w-1/2 max-h-[90vh] overflow-y-auto relative">
+        <button class="modal-close-btn absolute top-4 right-4 text-gray-400 hover:text-white text-3xl font-bold">&times;</button>
+        <h2 class="text-3xl font-bold text-white mb-4">Skills</h2>
+        <div class="flex justify-center mb-6">
+            <img src="https://placehold.co/400x200/1e293b/a0a7ad?text=Skills+Image" alt="Image representing skills" class="rounded-lg shadow-md">
         </div>
-    </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 text-gray-300">
+            <div>
+                <h3 class="font-semibold text-xl text-white mb-2">Technical Skills</h3>
+                <ul class="list-disc list-inside space-y-1">
+                    <li>Programming Languages: Python, Java, JavaScript, C++</li>
+                    <li>Frameworks: React, Node.js, Django</li>
+                    <li>Databases: SQL, MongoDB</li>
+                    <li>Cloud: AWS, Google Cloud</li>
+                </ul>
+            </div>
+            <div
 
     <script>
         // Get all elements with the 'data-modal-target' attribute
