--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 <img src="https://placehold.co/400x200/1e293b/a0a7ad?text=Contact+Image" alt="Image representing contact" class="rounded-lg shadow-md">
             </div>
             
-            <div class="nav-container text-center">
+            <div class="class="flex flex-wrap justify-center gap-4 text-2xl"">
                 <a href="https://www.facebook.com/jawadal.sovon" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/jawatalsovon/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/jawat-al-sovon-a42295354/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
