--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
                 <a href="https://www.linkedin.com/in/jawat-al-sovon-a42295354/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/jawatalsovon" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://www.youtube.com/@Jawat-zz4wx" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+            <p style="text-align: center;"> Email: jawatalsovon2981@gmail.com </p>
             </div>
         </div>
     </div>
