--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="text-center mb-12">
         <div class="w-32 h-32 rounded-full overflow-hidden mx-auto mb-4 border-4 border-gray-700 shadow-lg">
-            <img src="https://placehold.co/128x128/1e293b/a0a7ad?text=Your+Photo" alt="Jawat's photo" class="w-full h-full object-cover">
+            <img src="profile.jpg" alt="Jawat's photo" class="w-full h-full object-cover">
         </div>
         <h1 class="text-4xl sm:text-5xl font-bold text-white mb-2">Jawat Al Sovon</h1>
         <p class="text-lg text-gray-400">High School Graduate | Class of 2025</p>
@@ -365,12 +365,12 @@
             </div>
             
         <div class="flex flex-wrap justify-center gap-6 text-2xl">
+                <a href="mailto:jawatalsovon2981@gmail.com" aria-label="Email"><i class="fa fa-envelope"></i></a>
                 <a href="https://www.facebook.com/jawadal.sovon" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/jawatalsovon/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/jawat-al-sovon-a42295354/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/jawatalsovon" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://www.youtube.com/@Jawat-zz4wx" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-            <p style="text-align: center;"> Email: jawatalsovon2981@gmail.com </p>
             </div>
         </div>
     </div>
