--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         
         <div data-modal-target="about-modal" class="group cursor-pointer text-center mb-6">
             <h2 class="text-3xl font-bold text-white mb-2">About Me</h2>
-            <p class="text-center text-gray-400">Hardworking high school graduate with strong academic background and robust communication, technical, leadership and organizational skills seeking for college admission in fall 2026. 
+            <p class="text-center text-gray-400">Hardworking high school graduate with strong academic background 
+                <br> and communication, technical, leadership and organizational skills seeking for college admission in fall 2026. 
                 <br> Eager to pursue rigorous academic goals to explore my interdisciplinary interests in Data science and Business Analytics.</p>
         </div>
         
@@ -136,18 +137,16 @@
                 <img src="https://placehold.co/400x200/1e293b/a0a7ad?text=Your+Photo+Here" alt="Placeholder for a professional photo" class="rounded-lg shadow-md">
             </div>
             <p class="text-gray-300 leading-relaxed">
-                Hello there, 
-
-                 This is Jawat Al Sovon. I am a high school graduate from Rajshahi Cadet College, one of the most prestigious institutions in my country. I love to dream, 
+                Hello there, <br>
+               This is Jawat Al Sovon. I am a high school graduate from Rajshahi Cadet College, one of the most prestigious institutions in my country. I love to dream, 
                 and it’s always highly rewarding to see some of my dreams come true, like earning my own money to buy presents for my family and performing on a major stage. 
-
-                But one of my earliest dreams yet remains unfulfilled. In fifth grade, while studying a paragraph on "Unemployment issues in Bangladesh,"
-                I first imagined that I could one day address this challenge. 
-
-                A few years ago, I met Taukir Vai, a freelancer who started his own IT firm after he couldn't get into a public university and was ridiculed for his academic "failure".
-                However, now, he's training others and building a skilled workforce. However, for his lack of official recognition, his firm's growth is still limited.
-                So I found that to tackle a problem on a large scale, only initiative and practical skills are not enough; one has to have an accredited education.
-                I've found my passion in data science, where I love dealing with datasets and using them to dig out real solutions. 
+                <br>
+                But one of my earliest dreams is unfulfilled yet. In fifth grade, while studying a paragraph on "Unemployment issues in Bangladesh,"
+                I first imagined that I could one day address this challenge. <br>
+            A few years ago, I met Taukir Vai, a freelancer who started his own IT firm after he couldn't get into a public university and was ridiculed for his academic "failure".
+                However, now, he's training others and building a skilled workforce. But, for his lack of official recognition, his firm's growth is still limited.
+                So I found that to tackle a problem on a large scale, only initiative and practical skills are not enough; one has to have an accredited education.<br>
+                <br> I've found my passion in data science, where I love dealing with datasets and using them to dig out real solutions. 
                 A data science major from a worldwide-recognized university will provide me with practical expertise and the official credibility I need.
                 By the time I graduate, I plan to establish my own data firm. I want to build it into a company, maybe even a multinational one someday,
                 creating opportunities for at least a portion of the 2.6 million unemployed people in my country, including 1.38 million university graduates.
