--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="w-full max-w-5xl">
         
         <div data-modal-target="about-modal" class="group cursor-pointer text-center mb-6">
-            <h2 class="text-3xl font-bold text-white mb-2">About Me</h2>
+            <h2 class="text-3xl font-bold text-white mb-2 text-white">About Me</h2>
             <p class="text-center text-gray-400">Hardworking high school graduate with strong academic background 
                 <br> and communication, technical, leadership and organizational skills seeking for college admission in fall 2026. 
                 <br> Eager to pursue rigorous academic goals to explore my interdisciplinary interests in Data science and Business Analytics.</p>
