--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </a>
             </div>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-10">
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mb-10">
             
 
             <div data-modal-target="activities-modal" class="group cursor-pointer p-6 bg-gray-800/60 rounded-xl shadow-lg hover:scale-105 transition-transform duration-300 transform-gpu hover:bg-gray-700/60">
