--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <button class="modal-close-btn absolute top-4 right-4 text-gray-400 hover:text-white text-3xl font-bold">&times;</button>
             <h2 class="text-3xl font-bold text-white mb-4">About Me</h2>
             <div class="flex justify-center mb-6">
-                <img src="about.jpg" alt="Placeholder for a professional photo" class="rounded-lg shadow-md">
+                <img src="about.jpg" alt="Placeholder for a professional photo" class="rounded-lg shadow-md" style="width: 300px; height: 300px;">
             </div>
             <p class="text-gray-300 leading-relaxed">
                 Hello there, <br>
