--- a/index.html
+++ b/index.html
@@ -148,29 +148,29 @@
             <h2 class="text-3xl font-bold text-white mb-6">Projects</h2>
             <div class="w-full flex-grow flex flex-col items-center space-y-8 overflow-y-auto h-full">
                 <div class="project-item w-full flex flex-col items-center text-center">
-                    <img src="p1.jpg" alt="Image for project 1" class="rounded-lg shadow-md mb-4" style="width: 300px; height: 150px;">
+                    <img src="p1.jpg" alt="Image for project 1" class="rounded-lg shadow-md mb-4" style="width: 300px; height: 180px;">
                     <h3 class="font-semibold text-xl text-white mb-2">Project Title 1</h3>
                     <p class="text-gray-300">Description of your first project. Talk about the technologies used, your role, and the key features or outcomes.</p>
                 </div>
                 <div class="project-item w-full flex flex-col items-center text-center">
                     <div class="flex flex-col sm:flex-row gap-4 justify-center mb-4">
-                        <img src="p2.1.jpg" alt="Image A for project 2" class="rounded-lg shadow-md" style="width: 100px; height: 50px;">
-                        <img src="p2.2.jpg" alt="Image B for project 2" class="rounded-lg shadow-md" style="width: 100px; height: 50px;">
-                        <img src="p2.3.jpg" alt="Image C for project 2" class="rounded-lg shadow-md" style="width: 100px; height: 50px;">
+                        <img src="p2.1.jpg" alt="Image A for project 2" class="rounded-lg shadow-md" style="width: 140px; height: 80px;">
+                        <img src="p2.2.jpg" alt="Image B for project 2" class="rounded-lg shadow-md" style="width: 140px; height: 80px;">
+                        <img src="p2.3.jpg" alt="Image C for project 2" class="rounded-lg shadow-md" style="width: 140px; height: 80px;">
                     </div>
                     <h3 class="font-semibold text-xl text-white mb-2">Project Title 2</h3>
                     <p class="text-gray-300">Description of your second project. This could be a complex application, a physical product, or a creative work. Use the multiple image slots to showcase different views or features of this project.</p>
                 </div>
                 <div class="project-item w-full flex flex-col items-center text-center">
                      <div class="flex flex-col sm:flex-row gap-4 justify-center mb-4">
-                        <img src="p3.1.jpg" alt="Image A for project 3" class="rounded-lg shadow-md" style="width: 150px; height: 75px;">
-                        <img src="p3.2.jpg" alt="Image B for project 3" class="rounded-lg shadow-md" style="width: 150px; height: 75px;">
+                        <img src="p3.1.jpg" alt="Image A for project 3" class="rounded-lg shadow-md" style="width: 200px; height: 120px;">
+                        <img src="p3.2.jpg" alt="Image B for project 3" class="rounded-lg shadow-md" style="width: 200px; height: 120px;">
                      </div>
                     <h3 class="font-semibold text-xl text-white mb-2">Project Title 3</h3>
                     <p class="text-gray-300">Description of your third project. Highlight what makes this project unique or why it's a good example of your skills.</p>
                 </div>
                  <div class="project-item w-full flex flex-col items-center text-center">
-                    <img src="p4.jpg" alt="Image for project 4" class="rounded-lg shadow-md mb-4">
+                    <img src="p4.jpg" alt="Image for project 4" class="rounded-lg shadow-md mb-4" style="width: 240px; height: 400px;">
                     <h3 class="font-semibold text-xl text-white mb-2">Project Title 1</h3>
                     <p class="text-gray-300">Description of your first project. Talk about the technologies used, your role, and the key features or outcomes.</p>
                 </div>
@@ -257,21 +257,21 @@
             <div class="w-full flex-grow flex flex-col items-center space-y-8 overflow-y-auto h-full">
                 
                 <div class="activities-item w-full flex flex-col items-center text-center">
-                    <img src="research.jpg" alt="Image for Research" class="rounded-lg shadow-md mb-4" style="width: 300px; height: 150px;">
+                    <img src="research.jpg" alt="Image for Research" class="rounded-lg shadow-md mb-4" style="width: 300px; height: 250px;">
                     <h3 class="font-semibold text-xl text-white mb-2">Research</h3>
                     <p class="text-gray-300">Project Researcher, Research Paper author, Stockholm Junior Water Prize (SJWP), CERN Beamline Competition (BL4S)</p>
                     <p class="text-gray-300">Researched and prototyped a self-powered wastewater treatment system: National winner (SJWP). Proposed a particle detector experiment for BL4S.</p>
                 </div>
 
                 <div class="activities-item w-full flex flex-col items-center text-center">
-                    <img src="athletics.jpg" alt="Image for Athletics" class="rounded-lg shadow-md mb-4" style="width: 300px; height: 150px;">
+                    <img src="athletics.jpg" alt="Image for Athletics" class="rounded-lg shadow-md mb-4" style="width: 300px; height: 170px;">
                     <h3 class="font-semibold text-xl text-white mb-2">Athletics: JV/Varsity</h3>
                     <p class="text-gray-300">Track and field, 1st Class Long Runner, Rajshahi Cadet College</p>
                     <p class="text-gray-300">Trained Juniors for long-run, relay events. Won over 20 medals in four years of Annual Athletics Comp. Consistent 1st finishes in 800m & 1500m races.</p>
                 </div>
 
                 <div class="activities-item w-full flex flex-col items-center text-center">
-                    <img src="debate.jpg" alt="Image for Debate/Speech" class="rounded-lg shadow-md mb-4" style="width: 300px; height: 150px;">
+                    <img src="debate.jpg" alt="Image for Debate/Speech" class="rounded-lg shadow-md mb-4" style="width: 300px; height: 170px;">
                     <h3 class="font-semibold text-xl text-white mb-2">Debate/Speech</h3>
                     <p class="text-gray-300">Founder and President, Rajshahi Cadet College MUN Club</p>
                     <p class="text-gray-300">Founded the club, organized biweekly workshops, and Intra MUNs with 3+ students. Won 4 national MUN awards, and mentored juniors to do the same</p>
@@ -279,8 +279,8 @@
 
                 <div class="activities-item w-full flex flex-col items-center text-center">
                      <div class="flex flex-col sm:flex-row gap-4 justify-center mb-4">
-                        <img src="music1.jpg" alt="Image A for Music" class="rounded-lg shadow-md" style="width: 150px; height: 75px;">
-                        <img src="music2.jpg" alt="Image B for Music" class="rounded-lg shadow-md" style="width: 150px; height: 75px;">
+                        <img src="music.jpg" alt="Image A for Music" class="rounded-lg shadow-md" style="width: 200px; height: 12opx;">
+                        <img src="music2.jpg" alt="Image B for Music" class="rounded-lg shadow-md" style="width: 200px; height: 120px;">
                      </div> 
                     <h3 class="font-semibold text-xl text-white mb-2">Music: Vocal</h3>
                     <p class="text-gray-300">Lead Vocalist and Rhythm Guitatist, Shohosrabdo (The Millennial): Rajshahi Cadet College Band Team</p>
@@ -380,7 +380,7 @@
             <button class="modal-close-btn absolute top-4 right-4 text-gray-400 hover:text-white text-3xl font-bold">&times;</button>
             <h2 class="text-3xl font-bold text-white mb-4">Contact</h2>
             <div class="flex justify-center mb-6">
-                <img src="contact.jpg" alt="Image representing contact" class="rounded-lg shadow-md" style="width: 300px; height: 150px;">
+                <img src="contact.jpg" alt="Image representing contact" class="rounded-lg shadow-md" style="width: 300px; height: 190px;">
             </div>
             
         <div class="flex flex-wrap justify-center gap-6 text-2xl">
