--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="flex justify-center mb-6">
                 <img src="about.jpg" alt="Placeholder for a professional photo" class="rounded-lg shadow-md" style="width: 300px; height: 300px;">
             </div>
-            <p class="text-gray-300 leading-relaxed"  style="test-align: justify;">
+            <p class="text-gray-300 leading-relaxed"  style="text-align: justify;">
                 Hello there, <br>
                 This is Jawat Al Sovon. I am a high school graduate from Rajshahi Cadet College, one of the most prestigious institutions in my country. I love to dream, 
                 and it’s always highly rewarding to see some of my dreams come true, like earning my own money to buy presents for my family and performing on a major stage. 
