--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@
             <p class="text-gray-300 leading-relaxed"  style="text-align: justify;">
                 Hello there, <br>
                 This is Jawat Al Sovon. I am a high school graduate from Rajshahi Cadet College, one of the most prestigious institutions in my country. I love to dream, 
-                and it’s always highly rewarding to see some of my dreams come true, like earning my own money to buy presents for my family and performing on a major stage. 
+                And it’s always gratifying to see some of my dreams come true, like earning my own money to buy presents for my family and performing on a major stage. 
                 <br>
-                But one of my earliest dreams is unfulfilled yet. In fifth grade, while studying a paragraph on "Unemployment issues in Bangladesh,"
+                But one of my earliest dreams remains unfulfilled. In fifth grade, while studying a paragraph on "Unemployment issues in Bangladesh,"
                 I first imagined that I could one day address this challenge. <br>
             A few years ago, I met Taukir Vai, a freelancer who started his own IT firm after he couldn't get into a public university and was ridiculed for his academic "failure".
-                However, now, he's training others and building a skilled workforce. But, for his lack of official recognition, his firm's growth is still limited.
+                However, now, he's training others and building a skilled workforce. However, due to his lack of official recognition, his firm's growth remains limited.
                 So I found that to tackle a problem on a large scale, only initiative and practical skills are not enough; one has to have an accredited education.<br>
                 <br> I've found my passion in data science, where I love dealing with datasets and using them to dig out real solutions. 
                 A data science major from a worldwide-recognized university will provide me with practical expertise and the official credibility I need.
                 By the time I graduate, I plan to establish my own data firm. I want to build it into a company, maybe even a multinational one someday,
-                creating opportunities for at least a portion of the 2.6 million unemployed people in my country, including 1.38 million university graduates.
+                creating opportunities for at least a portion of the 2.6 million unemployed people in my country, including 1.38 million unemployed college graduates.
                 
 
             </p>
@@ -271,7 +271,7 @@
                 </div>
 
                 <div class="activities-item w-full flex flex-col items-center text-center">
-                    <img src="debate.jpg" alt="Image for Debate/Speech" class="rounded-lg shadow-md mb-4" style="width: 300px; height: 170px;">
+                    <img src="debate.jpg" alt="Image for Debate/Speech" class="rounded-lg shadow-md mb-4" style="width: 300px; height: 240px;">
                     <h3 class="font-semibold text-xl text-white mb-2">Debate/Speech</h3>
                     <p class="text-gray-300">Founder and President, Rajshahi Cadet College MUN Club</p>
                     <p class="text-gray-300">Founded the club, organized biweekly workshops, and Intra MUNs with 3+ students. Won 4 national MUN awards, and mentored juniors to do the same</p>
